Changes between 1.4.7 and 1.4.8
==================================================

- fix issue 13 - correct handling of the tag name object in xmlgen
- fix issue 14 - support raw attribute values in xmlgen
- fix windows terminalwriter printing/re-line problem

Changes between 1.4.6 and 1.4.7
==================================================

- fix issue11 - own test failure with python3.3 / Thanks Benjamin Peterson
- help fix pytest issue 102

Changes between 1.4.5 and 1.4.6
==================================================

- help to fix pytest issue99: unify output of 
  ExceptionInfo.getrepr(style="native") with ...(style="long")
- fix issue7: source.getstatementrange() now raises proper error
  if no valid statement can be found
- fix issue8: fix code and tests of svnurl/svnwc to work on subversion 1.7 - 
  note that path.status(updates=1) will not properly work svn-17's status 
  --xml output is broken.
- make source.getstatementrange() more resilent about non-python code frames
  (as seen from jnja2)
- make trackeback recursion detection more resilent
  about the eval magic of a decorator library
- iniconfig: add support for ; as comment starter
- properly handle lists in xmlgen on python3
- normalize py.code.getfslineno(obj) to always return a (string, int) tuple
  defaulting to ("", -1) respectively if no source code can be found for obj.

Changes between 1.4.4 and 1.4.5
==================================================

- improve some unicode handling in terminalwriter and capturing
  (used by pytest)

Changes between 1.4.3 and 1.4.4
==================================================

- a few fixes and assertion related refinements for pytest-2.1
- guard py.code.Code and getfslineno against bogus input
  and make py.code.Code objects for object instance
  by looking up their __call__ function.
- make exception presentation robust against invalid current cwd

Changes between 1.4.2 and 1.4.3
==================================================
